Mon Sep  2 15:01:46 UTC 2013  Phil Mesnier  <mesnier_p@local>

        * orbsvcs/Naming_Service/NT_Naming_Server.cpp:
        * orbsvcs/Notify_Service/NT_Notify_Server.cpp:

          explicit includes.

Sun Sep  1 00:28:39 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/driver/drv_args.cpp:

          Be explicit about including headers that used to be implicitly
          implicitly.

Fri Aug 16 08:36:23 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * ChangeLogs/ChangeLog-2013a:
        * NEWS:
          Prepared for next release

Fri Aug 16 08:56:17 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.2.1 released.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: